# fun-with-ml

./: .gitignore  README.md  pyproject.toml
dcgan/: README.md  config.py  model.py  train.py
gan/: README.md  config.py  data.py  model.py  train.py
gpt/: README.md  config.py  data.py  model.py  train.py
gpt/data/openwebtext/: prepare.py
gpt/data/wikitext/: prepare.py
stable_diffusion/infinite_zoom/: README.md  app.py  inpainting.py
unet/: model.py
wgan_gp/: README.md  config.py  train.py
