[tool.poetry]
name = "transformers-playground"
version = "0.1.0"
description = ""
authors = ["Tomasz Wrona <tomasz@wrona.me>"]
readme = "README.md"
packages = [{include = "gpt"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
transformers = "^4.26.1"
numpy = "^1.24.2"
torchinfo = "^1.7.2"
pytorch-lightning = "^1.9.2"
datasets = "^2.9.0"
tqdm = "^4.64.1"
wandb = "^0.13.10"
rich = "^13.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
